Make sure inputs shrink on small screens

--- a/src/dashboard/theme.module.css
+++ b/src/dashboard/theme.module.css
@@ -82,6 +82,7 @@ input {
 
 .form input,
 .form select {
+  width: 0;
   flex-grow: 1;
 }
 
